--- a/LunchList/assets/help.html
+++ b/LunchList/assets/help.html
@@ -9,7 +9,7 @@
 	<title>This help site is useless to you ;)</title>
 	<ui>
 		<li>If your are reading this for help your are in serious trouble</li>
-		<li>Please stop reading this your are just oing to cause your self more paine</li>
+		<li>Please stop reading this your are just going to cause your self more paine</li>
 	</ui>
 
 </body>
